# aoc2022

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config  config.toml
.github/: renovate.json
.github/workflows/: ci.yml
.templates/: Cargo.toml
.templates/src/: lib.rs
2022/day_00/: Cargo.toml  README.md
2022/day_00/src/: main.rs
2022/day_01/: Cargo.toml
2022/day_01/src/: lib.rs  main.rs
2022/day_02/: Cargo.toml
2022/day_02/src/: beats.rs  hand_shape.rs  lib.rs  main.rs  round.rs  strategy.rs
2022/day_03/: Cargo.toml  README.md
2022/day_03/src/: lib.rs  main.rs
2022/day_04/: Cargo.toml
2022/day_04/src/: lib.rs  main.rs
2022/day_05/: Cargo.toml  README.md
2022/day_05/src/: lib.rs  main.rs  procedure.rs  stacks.rs
2022/day_06/: Cargo.toml  README.md
2022/day_06/src/: lib.rs  main.rs
2022/day_07/: Cargo.toml  README.md
2022/day_07/src/: lib.rs  main.rs  terminal_output.rs
2022/day_08/: Cargo.toml  README.md
2022/day_08/src/: direction.rs  lib.rs  main.rs  scenic_score.rs  tree.rs  ugrid.rs  visibility_check.rs
2022/day_09/: Cargo.toml  README.md  example_two.txt
2022/day_09/src/: lib.rs  main.rs  motion.rs  position.rs  rope.rs
2022/day_10/: Cargo.toml  README.md
2022/day_10/src/: crt.rs  instruction.rs  lib.rs  main.rs
2022/day_11/: Cargo.toml  README.md
2022/day_11/src/: input.rs  lib.rs  main.rs  monkey.rs  note.rs  round.rs
2022/day_12/: Cargo.toml  README.md
2023/day_05/: Cargo.toml
advent_of_code/: Cargo.toml
advent_of_code/src/: helpers.rs  lib.rs  solve.rs
src/puzzles/: 01.md  02.md
(+11 files in other folders)
