[package]
name = "douglasduteil---advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
advent_of_code = { path = "./advent_of_code" }

[workspace]
members = ["advent_of_code"]
